fix: z-index3 to hologram and holocover

--- a/styles/holocover.css
+++ b/styles/holocover.css
@@ -14,7 +14,7 @@
   scale: 0 0;
   visibility: hidden;
   width: 80vw;
-  z-index: 1;
+  z-index: 4;
 }
 
 @keyframes holocoverLoop {
