--- a/styles/hologram.css
+++ b/styles/hologram.css
@@ -23,7 +23,7 @@
   bottom: -139vh;
   visibility: hidden;
   width: 100vw;
-  z-index: 1;
+  z-index: 3;
 }
 
 .c-hologram.m-active {
